--- a/src/app/pages/layout/layout.component.css
+++ b/src/app/pages/layout/layout.component.css
@@ -1,105 +1,146 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    font-family: sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: sans-serif;
+}
+
+body {
+  background-color: #f3f5f9;
+}
+
+.wrapper {
+  display: flex;
+  position: relative;
+}
+
+.wrapper .sidebar {
+  width: 200px;
+  height: 100%;
+  background: #4b4276;
+  padding: 30px 0px;
+  position: fixed;
+  transition: left 0.9s ease; /* Smooth transition for opening/closing */
+}
+
+.wrapper .sidebar h2 {
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.wrapper .sidebar ul li {
+  padding: 15px;
+  border-bottom: 1px solid #bdb8d7;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  border-top: 1px solid rgba(255, 255, 255, 0.05);
+}
+
+.wrapper .sidebar ul li a {
+  color: #bdb8d7;
+  display: block;
+}
+
+.wrapper .sidebar ul li a .fas {
+  width: 25px;
+}
+
+.wrapper .sidebar ul li:hover {
+  background-color: #594f8d;
+}
+
+.wrapper .sidebar ul li:hover a {
+  color: #fff;
+}
+
+.wrapper .sidebar .social_media {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.wrapper .sidebar .social_media a {
+  display: block;
+  padding: 5px;
+  width: 200px;
+  background: #594f8d;
+  word-wrap: break-word;
+  text-align: center;
+  margin: 0 5px;
+  color: #bdb8d7;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.wrapper .main_content {
+  width: 100%;
+  /* margin-left: 200px; */
+}
+
+.wrapper .main_content2 {
+  width: 100%;
+  margin-left: 20px;
+}
+
+.wrapper .main_content .header {
+  padding: 20px;
+  background: #fff;
+  color: #717171;
+  border-bottom: 1px solid #e0e4e8;
+}
+
+.wrapper .main_content .info {
+  margin: 20px;
+  color: #717171;
+  line-height: 25px;
+}
+
+.wrapper .main_content .info div {
+  margin-bottom: 20px;
+}
+
+.hideShow {
+  font-size: large;
+  /* width: 100px; */
+  margin-left: 185px;
+  z-index: 2;
+}
+
+.hideShow2 {
+  font-size: large;
+  /* width: 100px; */
+  margin-left: 10px;
+}
+
+.sidebar:hover{
+  opacity: 1;
+}
+
+/* .hideShow {
+  background: 0px center white;
+  border: 0px;
+  border-radius: 50%;
+  box-shadow: rgba(9, 30, 66, 0.08) 0px 0px 0px 1px, rgba(9, 30, 66, 0.08) 0px 2px 4px 1px;
+  color: rgb(107, 119, 140);
+  cursor: pointer;
+  height: 24px;
+  opacity: 0;
+  outline: 0px;
+  padding: 0px;
+  position: absolute;
+  top: 32px;
+  transition: background-color 100ms linear 0s, color 100ms linear 0s, opacity 300ms cubic-bezier(0.2, 0, 0, 1) 0s, transform 300ms cubic-bezier(0.2, 0, 0, 1) 0s;
+  transform: translate(-50%);
+  width: 24px;
+} */
+
+@media (max-height: 500px) {
+  .social_media {
+    display: none !important;
   }
-  
-  body{
-     background-color: #f3f5f9;
-  }
-  
-  .wrapper{
-    display: flex;
-    position: relative;
-  }
-  
-  .wrapper .sidebar{
-    width: 200px;
-    height: 100%;
-    background: #4b4276;
-    padding: 30px 0px;
-    position: fixed;
-  }
-  
-  .wrapper .sidebar h2{
-    color: #fff;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  
-  .wrapper .sidebar ul li{
-    padding: 15px;
-    border-bottom: 1px solid #bdb8d7;
-    border-bottom: 1px solid rgba(0,0,0,0.05);
-    border-top: 1px solid rgba(255,255,255,0.05);
-  }    
-  
-  .wrapper .sidebar ul li a{
-    color: #bdb8d7;
-    display: block;
-  }
-  
-  .wrapper .sidebar ul li a .fas{
-    width: 25px;
-  }
-  
-  .wrapper .sidebar ul li:hover{
-    background-color: #594f8d;
-  }
-      
-  .wrapper .sidebar ul li:hover a{
-    color: #fff;
-  }
-   
-  .wrapper .sidebar .social_media{
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-  }
-  
-  .wrapper .sidebar .social_media a{
-    display: block;
-    padding: 5px;
-    width: 200px;
-    background: #594f8d;
-    word-wrap: break-word;
-    text-align: center;
-    margin: 0 5px;
-    color: #bdb8d7;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-  }
-  
-  .wrapper .main_content{
-    width: 100%;
-    margin-left: 200px;
-  }
-  
-  .wrapper .main_content .header{
-    padding: 20px;
-    background: #fff;
-    color: #717171;
-    border-bottom: 1px solid #e0e4e8;
-  }
-  
-  .wrapper .main_content .info{
-    margin: 20px;
-    color: #717171;
-    line-height: 25px;
-  }
-  
-  .wrapper .main_content .info div{
-    margin-bottom: 20px;
-  }
-  
-  @media (max-height: 500px){
-    .social_media{
-      display: none !important;
-    }
-  }
+}
