--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,19 +1,34 @@
 <div class="body">
     <div class="wrapper">
-        <div class="sidebar">
-            <h2>TICKETS MANAGER</h2>
+        <div [ngClass]="isvisible ? 'hideShow' : 'hideShow2'" (click)="isvisible = !isvisible">
+            <span class="showIcon" *ngIf="isvisible"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="25px" width="25px">
+                    <path fill="#bdb8d7"
+                        d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM184 232H328c13.3 0 24 10.7 24 24s-10.7 24-24 24H184c-13.3 0-24-10.7-24-24s10.7-24 24-24z" />
+                </svg></span>
+            <span class="showIcon" *ngIf="!isvisible">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="25px" width="25px">
+                    <path fill="#bdb8d7"
+                        d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM232 344V280H168c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V168c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H280v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z" />
+                </svg>
+            </span>
+        </div>
+        <div class="sidebar" *ngIf="isvisible">
+            <h2>TICKETS</h2>
             <ul>
                 <li><a routerLink="/dashboard">Dashboard</a></li>
-                <li><a routerLink="/employee">Employee</a></li>
-                <li><a routerLink="/department">Department</a></li>
+                <li *ngIf="loggedData.role == 'Super Admin'"><a routerLink="/employee">Employee</a></li>
+                <li *ngIf="loggedData.role == 'Super Admin'"><a routerLink="/department">Department</a></li>
                 <li><a routerLink="/tickets">Tickets</a></li>
                 <li><a routerLink="/new-ticket">New ticket</a></li>
             </ul>
             <div class="social_media">
-                <a href="#">{{loggedData.email}}</a>
+                <p>{{loggedData.email}}</p>
+            </div>
+            <div class="social_media">
+                <a (click)="logout()">Log Out</a>
             </div>
         </div>
-        <div class="main_content">
+        <div [ngClass]="isvisible ? 'main_content' : 'main_content2'">
             <router-outlet></router-outlet>
         </div>
     </div>
