--- a/src/app/pages/tickets/tickets.component.html
+++ b/src/app/pages/tickets/tickets.component.html
@@ -1,1 +1,102 @@
-<p>tickets works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header bg-success">
+                <div class="row">
+                    <div class="col-6">
+                        Ticket List
+                    </div>
+                    <div class="col-6 text-end">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop">
+                            <i class="fa-solid fa-square-plus"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6 pt-2" *ngFor="let ticket of ticketList">
+                        <div class="card">
+                            <div
+                                class="card-header bg-primary text-white d-flex align-items-center justify-content-between">
+                                <div class="d-flex align-items-center">
+                                    <i class="fa fa-user" style="padding-right: 7px;"></i> <span
+                                        class="text-design">{{ticket.state}}</span>
+                                </div>
+                                <!-- <div class="d-flex justify-content-between">
+                                    <i class="fa fa-pencil-square fl" aria-hidden="true" (click)="onEdit()"></i>
+                                    <i class="fa fa-minus-square fl" aria-hidden="true" (click)="onDelete()"></i>
+                                </div> -->
+                            </div>
+                            <div class="card-body">
+                                <div class="row pt-3">
+                                    <div class="col-4">
+                                        <i class="fa fa-phone" aria-hidden="true"></i>{{ticket.expectedEndDate| date: 'dd-MMM-yy'}}
+                                    </div>
+                                    <div class="col-8">
+                                        <i class="fa fa-envelope" aria-hidden="true"></i>{{ticket.createdDate | date: 'dd-MMM-yy'}}
+                                    </div>
+                                </div>
+                                <div class="row pt-2">
+                                    <div class="col-4">
+                                        <i class="fa fa-user-secret" aria-hidden="true"></i>{{ticket.deptName}}
+                                    </div>
+                                    <div class="col-8">
+                                        <i class="fa fa-server"></i>{{ticket.severity}}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">New Ticket</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-6">
+                        <label for="">Select Department</label>
+                        <select id="dept" class="form-select" [(ngModel)] = "ticketObj.deptId">
+                            <option value="" disabled selected>Select</option>
+                            @for (item of deptList$ | async; track item.deptId){
+                            <option [value]="item.deptId">{{item.deptName}}</option>
+                            }
+                        </select>
+                    </div>
+                    <div class="col-6">
+                        <label for="">Select Severity</label>
+                        <select name="" id="" class="form-select" [(ngModel)] = "ticketObj.severity">
+                            <option value="" disabled selected>Select</option>
+                            <option value="Low">Low</option>
+                            <option value="Medium">Medium</option>
+                            <option value="High">High</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <label for="">Ticket Description</label>
+                        <textarea class="form-control" [(ngModel)] = "ticketObj.requestDetails" name="" id="" rows="3" placeholder="Enter Ticket Description"></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" (click)="onCreateTicket()">Create Ticket</button>
+            </div>
+        </div>
+    </div>
+</div>
