--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 /* @import "~@fortawesome/fontawesome-free/css/all.css"; */
+body{
+    /* overflow-x: hidden;
+    margin: 0;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.5;
+    text-align: left;
+    background-color: #edf1f5; */
+}
